Fixing small alignment issues on index

--- a/app/assets/css/includes/header.css
+++ b/app/assets/css/includes/header.css
@@ -40,6 +40,7 @@ header > nav {
 
 .search-input-group {
     display: flex;
+    justify-content: space-between;
     border:1px solid black;
     padding:5px;
     border-radius: 5px;
