--- a/app/assets/css/index.css
+++ b/app/assets/css/index.css
@@ -1,5 +1,10 @@
 
 
+.main {
+    padding:0rem 1rem;
+    gap:2rem;
+}
+
 #home-header {
     position: relative;
     overflow: hidden;
@@ -7,17 +12,29 @@
     justify-content: center;
     align-items: center;
     width:100vw;
-    height:80vh;
+    height:60vh;
+    padding:1rem;
 }
 
 #home-header-text {
     color: #F4F3F2;
     background-color: var(--primary-color);
+    text-align: center;
     opacity: 0.9;
     font-size:clamp(1.5rem, 4vw, 3rem);
     padding:1rem;
-    margin-bottom:10rem;
+    margin-bottom:2rem;
     border-radius: 0.5rem;
+}
+
+@media (min-width: 768px) {
+    #home-header {
+        height:80vh;
+    }
+
+    #home-header-text {
+        margin-bottom:10rem;
+    }
 }
 
 #home-header-background {
